aws-cloudformation/solutions/simple/mean-stack/template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.nano
    ConstraintDescription: must be a valid EC2 instance type.
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId: "ami-047e03b8591f2d48a"
      UserData: !Base64 |
        #!/bin/bash
        sudo yum update -y && sudo yum install -y git

        # install docker
        sudo amazon-linux-extras install -y docker
        sudo service docker start
        sudo usermod -a -G docker ec2-user

        # install docker-compose
        sudo curl -L https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
        sudo chmod +x /usr/local/bin/docker-compose
        sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose

        # download repo and fire up docker-compose file
        git clone https://github.com/TGotwig/devops
        sudo docker-compose --project-directory /devops/aws-cloudformation/solutions/simple/mean-stack up -d

        # setup to start after each boot
        (crontab -l 2>/dev/null; echo "@reboot sudo service docker start && cd /devops-templates/aws-cloudformation/solutions/simple/mean-stack && sudo docker-compose up -d") | crontab -
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
